# minimail

./: .gitignore  CODE_OF_CONDUCT.md  config.json  config.sample.yaml  init.py  main.py  pyproject.toml  readme.md  requirements.txt
delivery_agents/: agent.py  mailgun.py  smtp.py
email_templates/: invite.html  jinja_base.html  jinja_example.html  mjml_example.mjml
rendering_engines/: engine.py  jinja.py  mjml.py
